--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,9 +4,7 @@
     update_cache: yes
 
 - name: Install required packages for Docker # apt-get install apt-transport-https ca-certificates curl software-properties-common -y
-  apt:
-    name: {{ item }}
-    install_recommends: yes
+  apt: name={{ item }} install_recommends=yes
   with_items:
     apt-transport-https
     ca-certificates
