--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
     update_cache: yes
 
 - name: Install required packages for Docker # apt-get install apt-transport-https ca-certificates curl software-properties-common
-  apt: name={{ item }}
+  apt: name={{ item }} state=present install_recommends=yes update_cache=yes force=yes
   with_items:
     apt-transport-https
     ca-certificates
