--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,12 +4,14 @@
     update_cache: yes
 
 - name: Install required packages for Docker # apt-get install apt-transport-https ca-certificates curl software-properties-common
-  apt: name="{{ item }}" state=present install_recommends=yes update_cache=yes force=yes
+  apt:
+    name: "{{ item }}"
+    install_recommends: "yes"
   with_items:
-    apt-transport-https
-    ca-certificates
-    curl
-    software-properties-common
+    - "apt-transport-https"
+    - "ca-certificates"
+    - "curl"
+    - "software-properties-common"
 
 - name: Docker - download install script
   command: curl https://get.docker.com/ > /tmp/install.sh && chmod +x /tmp/install.sh
