--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,12 @@
     - "software-properties-common"
 
 - name: Docker - download install script
-  command: "curl https://get.docker.com/ > /tmp/install.sh"
+  get_url:
+    url: "https://get.docker.com/"
+    dest: "/tmp/install.sh"
 
 - name: Docker - chmod script
   command: "chmod +x /tmp/install.sh"
+
+- name: Docker - install
+  command: "/tmp/install.sh"
